Wrong repaintContainerSkipped in RenderObject::container() when positioned objects are enclosed in a <foreignObject>. https://bugs.webkit.org/show_bug.cgi?id=89384

Reviewed by Simon Fraser.

No new tests. The bug was found in a code audit.

* rendering/RenderObject.cpp:
(WebCore::RenderObject::container):


Canonical link: https://commits.webkit.org/107339@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120732 268f45cc-cd09-0410-ab3c-d52691b4dbfc